crates/language/tests/snapshots/compile_passes__pass2_expanded.snap
---
source: crates/language/tests/compile_passes.rs
expression: dump
---
Feature voice(+voice, -voice)

prosody = μ σ Ft ω φ ι U

global trait CorePhonology:
    phon:
        a => ə / _# @stage word
        n => m / _# @stage stem

trait VerbCommon:
    syn:
        provides = VERB
    ==
    entrenchment = 0.5

sign go:
    entrenchment = 0.5
    entrenchment = 0.8
    syn:
        provides = VERB
        provides = VERB.motion
    phon:
        /go/
        g => k / #_ @stage stem
        o => ə / _# @stage phrase
