crates/language/tests/snapshots/compile_passes__pass4_ordered.snap
---
source: crates/language/tests/compile_passes.rs
expression: dump
---
Feature voice(+voice, -voice)
Prosody mora < syllable < foot < pword < phrase < iphrase < utterance

global trait CorePhonology:
    phon:
        n => m / _# @stage stem
        a => ə / _# @stage word

trait VerbCommon:
    entrenchment = 0.5
    syn:
        provides = VERB

sign go:
    entrenchment = 0.8
    syn:
        provides = VERB.motion
    phon:
        /go/
        g => k / #_ @stage stem
        o => ə / _# @stage phrase
