crates/language/tests/snapshots/compile_passes__trait_index.snap
---
source: crates/language/tests/compile_passes.rs
expression: "format!(\"{:#?}\", p.trait_index)"
---
{
    "VerbCommon": [
        "go",
    ],
}
